update Swagger API
